--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
     "@popperjs/core": "^2.11.2",
+    "apexcharts": "^3.40.0",
     "apexcharts-clevision": "3.28.5",
     "babel-eslint": "^10.1.0",
+    "chart.js": "^4.3.0",
     "clsx": "^1.1.1",
     "eslint-plugin-react": "^7.29.4",
     "leaflet": "^1.9.4",
@@ -31,7 +33,8 @@
     "mdi-material-ui": "^7.1.0",
     "next": "12.0.4",
     "nprogress": "^0.2.0",
-    "react-apexcharts": "^1.3.9",
+    "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.5.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.2.5"
